Mainpage mobil ready!

--- a/src/components/Footer.hbs
+++ b/src/components/Footer.hbs
@@ -8,22 +8,30 @@
         <p>Café & Rösterei</p>
     </div>
 
-    <div class="Flexbox_Adresse-Öffnungszeiten">   
-        <p>Komm uns besuchen! <br> Frauenhoferstr. 13, Kiel</p>
+    <div class="Flexbox_Infos-Footer">
+        <div class="Komm-uns-besuchen"> Komm uns besuchen!</div>
+        <div class="Flexbox_Adresse">Frauenhoferstr. 13, Kiel</div>
         <br>
-        <p>Mo-Fr 8-18 Uhr <br> Sa 11-18 Uhr</p>
-    </div>
+        <div class="Flexbox_Öffnungszeiten">   
+            <p>Mo-Fr 8-18 Uhr <br> Sa 11-18 Uhr</p>
+        </div>
+   </div>
 
-    <div class="Flexbox_Links-Footer">
-        <a href="#" class="Link_Footer">Café</a>
-        <a href="#" class="Link_Footer">Shop</a>
-        <a href="#" class="Link_Footer">Herkunft</a>
-    </div>
 
-    <div class="Flexbox_Links-Footer">
-        <a href="#" class="Link_Footer">Impressum</a>
-        <a href="#" class="Link_Footer">Datenschutz</a>
-    </div>
 
+    <div class="Flexbox_Alle-Links">
+        <div class="Flexbox_Links-Footer-One">
+            <a href="#" class="Link_Footer">Café</a>
+            <a href="#" class="Link_Footer">Shop</a>
+            <a href="#" class="Link_Footer">Herkunft</a>
+            <br>
+            <br>
+        </div>
+
+        <div class="Flexbox_Links-Footer-Two">
+            <a href="#" class="Link_Footer">Impressum</a>
+            <a href="#" class="Link_Footer">Datenschutz</a>
+        </div>
+    </div>
 </footer>
 
