--- a/src/css/base.css
+++ b/src/css/base.css
@@ -97,3 +97,22 @@ body text {
   text-decoration: none;
 }
 
+.Footer {
+  display: flex;
+  flex-direction: row;
+  height: 60vh;
+  width: 100%;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .Footer{
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  max-width: 100%;
+  
+  }
+}
