--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,9 +2,10 @@
 @import "base.css";
 @import "components/hero.css";
 @import "components/top-nav.css";
+@import "components/top-nav-mobile.css";
 @import "components/Animations.css";
 @import "components/buttons.css";
 @import "components/headings.css";
 @import "components/mainpage-boxes.css";
 @import "components/links.css";
-@import "components/media.css"
+@import "components/media.css";
