--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -1,95 +1,84 @@
 <header class="header">
-           <div class="Menu_Desktop">
-            <div class="Box_top-nav">
-                <nav class="Bar_top-nav">
-                    <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" >
-                    
-                    <ul class="List_top-nav">
-                        <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <span>das Café</span>
-                            </a>
-                        </li>
-                        <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <span>Herkunft</span>
-                            </a>
-                        </li>
-                        <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <span>Shop</span>
-                            </a>
-                            <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <img src="images/Shop Icon White.svg" alt="Cart" class="top-nav__icon">
-                            </a>
-                        </li>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+  <div class="Menu_Desktop">
+    <div class="Box_top-nav">
+      <nav class="Bar_top-nav">
+        <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" />
 
-        <div class="Menu_mobile">
-                <div class="Logo_top-nav">
-                   <img src="images/Logo Black.svg" alt="Logo">
-                </div>
-                    
-                <div class="Menu_toggle" onclick="toggleMenu()">
-                    <img src="images/Burger Menu.svg" alt="Menu">
-                </div>
+        <ul class="List_top-nav">
+          <li class="Item_top-nav">
+            <a href="#" class="Link_top-nav">
+              <span>das Café</span>
+            </a>
+          </li>
+          <li class="Item_top-nav">
+            <a href="#" class="Link_top-nav">
+              <span>Herkunft</span>
+            </a>
+          </li>
+          <li class="Item_top-nav">
+            <a href="#" class="Link_top-nav">
+              <span>Shop</span>
+            </a>
+            <li class="Item_top-nav">
+              <a href="#" class="Link_top-nav">
+                <img
+                  src="images/Shop Icon White.svg"
+                  alt="Cart"
+                  class="top-nav__icon"
+                />
+              </a>
+            </li>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 
-                <div class="Menupunkte_mobile">
-                    <ul class="List_top-nav">
-                        <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <span>das Café</span>
-                            </a>
-                        </li>
-                        <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <span>Herkunft</span>
-                            </a>
-                        </li>
-                        <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <span>Shop</span>
-                            </a>
-                            <li class="Item_top-nav">
-                            <a href="#" class="Link_top-nav">
-                                <img src="images/Shop Icon White.svg" alt="Cart" class="top-nav__icon">
-                            </a>
-                        </li>
-                        </li>
-                    </ul>
-
-                
-                    <div class="Menu_close" onclick="toggleMenu()">
-                        <img src="images/Burger Menu close.svg" alt="Close">
-                        
-                    </div>
-                 </div>
-            </div>  
-                 
-            <script src="script.js"></script>   
-              
-
-
-
-
-        
-    
-
-    <div class="Textbox_Header">
-        <h1 class="heading-primary">
-            <span class="heading-primary-main">Rustica</span>
-            <span class="heading-primary-sub">Bio und Fair seit 1991</span>
-        </h1>
-
-        <a href="#" class="btn btn-anthrazit btn-animated">zum Shop</a>
+  <div class="Menu_mobile">
+    <div class="Logo_top-nav_mobile">
+      <img src="images/Logo.svg" alt="Logo" />
     </div>
 
+    <div class="Menu_toggle" onclick="toggleMenu()">
+      <img src="images/Burger Menu.svg" alt="Menu" />
+    </div>
 
- 
+    <div class="Menupunkte_mobile">
+      <ul class="List_top-nav-mobile">
+        <li class="Item_top-nav-mobile">
+          <a href="#" class="Link_top-nav">
+            <span>das Café</span>
+          </a>
+        </li>
+        <li class="Item_top-nav-mobile">
+          <a href="#" class="Link_top-nav">
+            <span>Herkunft</span>
+          </a>
+        </li>
+        <li class="Item_top-nav-mobile">
+          <a href="#" class="Link_top-nav">
+            <span>Shop</span>
+          </a>
+        </li>
+      </ul>
+
+      <div class="Menu_close" onclick="toggleMenu()">
+        <img src="images/Burger Menu close.svg" alt="Close" />
+
+      </div>
+    </div>
+  </div>
+
+  <script src="../js/script.js"></script>
+  <script src="../js/index.js"></script>
+
+  <div class="Textbox_Header">
+    <h1 class="heading-primary">
+      <span class="heading-primary-main">Rustica</span>
+      <span class="heading-primary-sub">Bio und Fair seit 1991</span>
+    </h1>
+
+    <a href="#" class="btn btn-anthrazit btn-animated">zum Shop</a>
+  </div>
 
 </header>
