--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,27 +1,25 @@
-
-*{
-  margin: 0; 
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 body {
   @media (max-width: 768px) {
-  h1 {
-   font-size: 64px;
-   }
+    h1 {
+      font-size: 64px;
+    }
 
-  h2 {
-    font-size: 36px;
-     }
+    h2 {
+      font-size: 36px;
+    }
 
-  h3 {
-    font-size: 32px;
-       }
-  font-size: 14px;
+    h3 {
+      font-size: 32px;
+    }
+    font-size: 14px;
   }
 }
-
 
 header {
   height: 65vh;
@@ -34,12 +32,18 @@ header {
   align-items: center;
 }
 
-
 main {
- position: relative;
- 
-}
+  margin: 0 auto;
+  max-width: 1440px;
 
+  & div {
+    color: var(--div-color);
+
+    @media (min-width: 768px) {
+      color: var(--div-color);
+    }
+  }
+}
 
 Footer {
   display: flex;
@@ -51,50 +55,60 @@ Footer {
   padding: 10%;
 }
 
-
-
 img {
   max-width: 100%;
   height: auto;
 }
 
-
 h1 {
   font-family: Roboto, sans-serif;
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 1.1;
-  letter-spacing: 0%;
-  text-decoration: none; 
-}
+  font-weight: var(--h1-font-weight);
+  font-size: var(--h1-font-size);
+  line-height: var(--h1-line-height);
 
+  @media (max-width: 768px) {
+    font-weight: var(--h1-font-weight-m);
+    font-size: var(--h1-font-size-m);
+    line-height: var(--h1-line-height-m);
+  }
+}
 
 h2 {
   font-family: Roboto, sans-serif;
-  font-weight: 900;
-  font-size: 48px;
-  line-height: 1.1;
-  letter-spacing: 0%;
-  text-decoration: none;
+  font-weight: var(--h2-font-weight);
+  font-size: var(--h2-font-size);
+  line-height: var(--h2-line-height);
+
+  @media (max-width: 768px) {
+    font-weight: var(--h2-font-weight-m);
+    font-size: var(--h2-font-size-m);
+    line-height: var(--h2-line-height-m);
+  }
 }
 
 h3 {
   font-family: Roboto, sans-serif;
-  font-weight: 900;
-  font-size: 42px;
-  line-height: 1.1;
-  letter-spacing: 0%;
-  text-decoration: none;
+  font-weight: var(--h3-font-weight);
+  font-size: var(--h3-font-size);
+  line-height: var(--h3-line-height);
+
+  @media (max-width: 768px) {
+    font-weight: var(--h3-font-weight-m);
+    font-size: var(--h3-font-size-m);
+    line-height: var(--h3-line-height-m);
+  }
 }
 
-
 body text {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.3;
-  letter-spacing: 0%;
-  text-decoration: none;
+  font-weight: var(--body-text-font-weight);
+  font-size: var(--body-text-font-size);
+  line-height: var(--body-text-line-height);
+  
+  @media (max-width: 768px) {
+    font-weight: var(--body-text-font-weight-m);
+    font-size: var(--body-text-font-size-m);
+    line-height: var(--body-text-line-height-m);
+  }
 }
 
 .Footer {
@@ -106,13 +120,12 @@ body text {
 }
 
 @media (max-width: 768px) {
-  .Footer{
-  height: 75vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  max-width: 100%;
-  
+  .Footer {
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    max-width: 100%;
   }
 }
