--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -9,7 +9,10 @@
   Orange: rgba(215,124,18,1) #D77C12
   Medium Grey: rgba(115,115,115,1) #737373
   Light Grey: rgba(233,233,233,1) #E9E9E9
+*/ 
 
+:root {
+  /*
   --div-color: #000000;
   --div-color: #FFFFFF;
   --div-color: #1A1A1A;
@@ -19,26 +22,43 @@
   --div-color: #D77C12;
   --div-color: #737373;
   --div-color: #E9E9E9;
-  
+ 
 
-  /* 
+  /*
   Text Styles Desktop:
-   
+   */
     --h1-font-size: 96px; 
+    --h1-font-weight: 900;
+    --h1-line-height: 1.1;
+
     --h2-font-size: 48px;
+    --h2-font-weight: 900;
+    --h2-line-height: 1.1;
+
     --h3-font-size: 42px;
+    --h3-font-weight:400;
+    --h3-line-height: 1.1
+
     --body-text-font-size: 18px;
   
-  
-  Text Styles Mobil:
-   
-  
+  /*
+  Text Styles Mobile:
+   */ 
    --h1-font-size: 64px; 
+   --h1-font-weight: 900;
+   --h1-line-height: 1.1;
+
    --h2-font-size: 36px;
-   --h3-font-size: 32px;
-   --body-text-font-size: 14px;
-  
-}
+   --h2-font-weight: 900;
+   --h2-line-height: 1.1;
+
+   --h3-font-size: 14px;
+   --h3-font-weight:400;
+   --h3-line-height: 1.3;
+
+   --body-text-font-size: 18px;
+  }
+
 
 
 /*
