ChangeColor Menu ok, svgs not ok

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -46,17 +46,17 @@
     <div class="Menupunkte_mobile">
       <ul class="List_top-nav-mobile">
         <li class="Item_top-nav-mobile">
-          <a href="#" class="Link_top-nav">
+          <a href="#" class="Link_top-nav-mobile">
             <span>das Café</span>
           </a>
         </li>
         <li class="Item_top-nav-mobile">
-          <a href="#" class="Link_top-nav">
+          <a href="#" class="Link_top-nav-mobile">
             <span>Herkunft</span>
           </a>
         </li>
         <li class="Item_top-nav-mobile">
-          <a href="#" class="Link_top-nav">
+          <a href="#" class="Link_top-nav-mobile">
             <span>Shop</span>
           </a>
         </li>
@@ -69,9 +69,6 @@
     </div>
   </div>
 
-  <script src="../js/script.js"></script>
-  <script src="../js/index.js"></script>
-
   <div class="Textbox_Header">
     <h1 class="heading-primary">
       <span class="heading-primary-main">Rustica</span>
@@ -80,5 +77,9 @@
 
     <a href="#" class="btn btn-anthrazit btn-animated">zum Shop</a>
   </div>
+
+  <script src="../js/script.js"></script>
+  <script src="../js/index.js"></script>
+  
 
 </header>
