--- a/src/css/components/top-nav.css
+++ b/src/css/components/top-nav.css
@@ -4,6 +4,7 @@
   top: 0;
   right: 0;
   width: 100%;
+  z-index:1
 }
 
 .List_top-nav {
@@ -16,14 +17,16 @@
   padding: 40px;
   float: right;
   font-family: sans-serif;
+ 
 }
 
 .Item_top-nav {
-  color: #ffffff;
+  color:black;
   text-align: center;
   display: inline;
   text-decoration: none;
   margin-right: 2vh;
+
 }
 
 .Logo_top-nav {
