--- a/src/css/components/top-nav-mobile.css
+++ b/src/css/components/top-nav-mobile.css
@@ -1,66 +1,78 @@
 .Menu_mobile {
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    top: 0;
-    padding: 20px 30px 0px 20px;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-  }
-  
-  @media (min-width: 769px) {
-    .Menu_mobile {
-      display: none;
-    }
-  }
-  
-  .Menupunkte_mobile {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    z-index: 1;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  top: 0;
+  padding: 20px 30px 0px 20px;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+}
+
+@media (min-width: 769px) {
+  .Menu_mobile {
     display: none;
-    flex-direction:column;
-    justify-content: center;
-    align-items:flex-start;
-    text-align: left;
-    
   }
-  
-  .Logo_top-nav_mobile {
-    width: 30px;
-  }
-  
-  .Menu_toggle {
-    width: 30px;
-    cursor: pointer;
-  }
-  
-  .Menu_close {
-    width: 30px;
-    cursor: pointer;
-    position: absolute;
-    top: 20px;
-    right: 30px;
-  }
-  
-  .List_top-nav-mobile {
-    list-style: none;
-    font-size: 48px;
-    font-weight: 900;
-    font-family: sans-serif;
-    position: absolute;
-    left: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .Item_top-nav-mobile {
-    padding: 10px;
-  }
-  
+}
+
+.Menupunkte_mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  z-index: 1;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: left;
+}
+
+.Logo_top-nav_mobile {
+  width: 30px;
+}
+
+.Menu_toggle {
+  width: 30px;
+  cursor: pointer;
+}
+
+.Menu_close {
+  width: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+}
+
+.List_top-nav-mobile {
+  list-style: none;
+  font-size: 48px;
+  font-weight: 900;
+  font-family: sans-serif;
+  position: absolute;
+  left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.Item_top-nav-mobile {
+  padding: 10px;
+}
+
+.Link_top-nav-mobile,
+.Link_top-nav-mobile:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.Link_top-nav-mobile:hover {
+  text-decoration-line: underline;
+}
+
+.Link_top-nav-mobile:active {
+  text-decoration-line: underline;
+}
