--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -33,40 +33,42 @@
       </nav>
     </div>
   </div>
+  <div class="Menu_mobile-test">
+    <nav class="Menu_mobile">
 
-  <div class="Menu_mobile">
-    <div class="Logo_top-nav_mobile">
-      <img src="images/Logo.svg" alt="Logo" />
-    </div>
-
-    <div class="Menu_toggle" onclick="toggleMenu()">
-      <img src="images/Burger Menu.svg" alt="Menu" />
-    </div>
-
-    <div class="Menupunkte_mobile">
-      <ul class="List_top-nav-mobile">
-        <li class="Item_top-nav-mobile">
-          <a href="#" class="Link_top-nav-mobile">
-            <span>das Café</span>
-          </a>
-        </li>
-        <li class="Item_top-nav-mobile">
-          <a href="#" class="Link_top-nav-mobile">
-            <span>Herkunft</span>
-          </a>
-        </li>
-        <li class="Item_top-nav-mobile">
-          <a href="#" class="Link_top-nav-mobile">
-            <span>Shop</span>
-          </a>
-        </li>
-      </ul>
-
-      <div class="Menu_close" onclick="toggleMenu()">
-        <img src="images/Burger Menu close.svg" alt="Close" />
-
+      <div class="Logo_top-nav_mobile">
+        <img src="images/Logo.svg" alt="Logo" id="logoImg"/>
       </div>
-    </div>
+
+      <div class="Menu_toggle" onclick="toggleMenu()">
+        <img src="images/Burger Menu.svg" alt="Menu" id="burgerImg"/>
+      </div>
+
+      <div class="Menupunkte_mobile">
+        <ul class="List_top-nav-mobile">
+          <li class="Item_top-nav-mobile">
+            <a href="#" class="Link_top-nav-mobile">
+              <span>das Café</span>
+            </a>
+          </li>
+          <li class="Item_top-nav-mobile">
+            <a href="#" class="Link_top-nav-mobile">
+              <span>Herkunft</span>
+            </a>
+          </li>
+          <li class="Item_top-nav-mobile">
+            <a href="#" class="Link_top-nav-mobile">
+              <span>Shop</span>
+            </a>
+          </li>
+        </ul>
+
+        <div class="Menu_close" onclick="toggleMenu()">
+          <img src="images/Burger Menu close.svg" alt="Close" />
+
+        </div>
+      </div>
+    </nav>
   </div>
 
   <div class="Textbox_Header">
@@ -77,9 +79,5 @@
 
     <a href="#" class="btn btn-anthrazit btn-animated">zum Shop</a>
   </div>
-
-  <script src="../js/script.js"></script>
-  <script src="../js/index.js"></script>
-  
 
 </header>
