--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,3 +9,4 @@
 @import "components/mainpage-boxes.css";
 @import "components/links.css";
 @import "components/media.css";
+@import "components/subpage-boxes_DasCafé.css";
