--- a/src/css/components/mainpage-boxes.css
+++ b/src/css/components/mainpage-boxes.css
@@ -45,8 +45,6 @@
 .Textbox_left {
   width: 50%;
   padding: 5% 10% 5% 0%;
-  
-  
 }
 
 @media (max-width: 768px) {
@@ -284,14 +282,11 @@
   align-items: flex-start;
   justify-content: space-between;
   flex: 1;
-}
-
-@media (max-width: 768px) {
-  .Flexbox_Logo-Footer {
-    scale: 1;
+  @media (max-width: 768px) {
     order: 1;
     flex-basis: 33%;
     justify-content: center;
+    padding: 0 0 10% 0;
   }
 }
 
@@ -306,7 +301,6 @@
   text-decoration: none;
   flex: 1;
   margin-top: auto;
-  
 }
 
 @media (max-width: 768px) {
@@ -326,30 +320,27 @@
 
 .Flexbox_Adresse {
   display: flex;
-  
-
-  
 }
 
 @media (max-width: 768px) {
   .Flexbox_Adresse {
     flex-direction: column;
     display: block;
-    transform: translateY(50px);
+
+    order: 2;
     flex-basis: 50%;
   }
 }
 
 .Flexbox_Öffnungszeiten {
   display: flex;
-
 }
 
 @media (max-width: 768px) {
   .Flexbox_Öffnungszeiten {
     flex-direction: row;
     flex-basis: 50%;
-    transform: translateY(35px);
+    order: 2;
   }
 }
 
@@ -358,7 +349,6 @@
   justify-content: space-between;
   flex: 2;
   margin-top: auto;
-  
 }
 
 @media (max-width: 768px) {
@@ -368,7 +358,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    margin: 0;
+    margin: 5% 0 0 0;
   }
 }
 
