--- a/src/css/components/subpage-boxes_DieHerkunft.css
+++ b/src/css/components/subpage-boxes_DieHerkunft.css
@@ -26,13 +26,20 @@
   display: flex;
   flex-direction: row;
   padding: 5%;
-  height: 90vh;
+  height: 90vh;@media (max-width: 768px){
+   flex-wrap:wrap;
+  }
 }
 
 .Textbox_left-DieHerkunft {
   width: 40%;
   padding: 0% 10% 5% 0%;
   top: 0px;
+  @media (max-width: 768px){
+    flex-basis:100%;
+    width:100%;
+    padding: 0;
+  }
 }
 .Titel_Die-Anbaugebiete {
   padding: 0 0 5% 0;
@@ -44,6 +51,11 @@
   display: flex;
   justify-content: flex-end;
   transform: translateY(50px);
+  @media (max-width: 768px){
+    flex-basis:100%;
+    width:100%;
+    padding: 0;
+  }
 }
 
 .Image_Coffe-Plant {
@@ -62,6 +74,10 @@
   padding: 10% 5% 0 5%;
   height: 100vh;
   margin: 0 0 10% 0;
+  @media (max-width: 768px){
+    flex-wrap:wrap;
+    height:auto;
+  }
 }
 
 .Imagebox_left-DieHerkunft {
@@ -69,13 +85,18 @@
   max-height: 100%;
   position: relative;
   display: flex;
-
   justify-content: center;
   padding: 5% 0 0 0;
+  @media (max-width: 768px){
+    order:2;
+  }
 }
 
 .Textbox_right-DieHerkunft {
   width: 40%;
+  @media (max-width: 768px){
+    width:100%;
+  }
 }
 
 .Image_Coffee-Worker {
