--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,3 +11,4 @@
 @import "components/media.css";
 @import "components/subpage-boxes_DasCafé.css";
 @import "components/subpage-boxes_DieHerkunft.css";
+@import "components/subpage-boxes_Impressum.css";
