--- a/src/css/components/top-nav.css
+++ b/src/css/components/top-nav.css
@@ -57,3 +57,14 @@
 .Link_top-nav-black:active {
   text-decoration-line: underline;
 }
+
+.Item_top-nav.current-page {
+  text-decoration: underline;
+  color:blue;
+}
+
+.Link_top-nav.current-page {
+  text-decoration: underline;
+  color:red;
+}
+
