--- a/src/components/Footer.hbs
+++ b/src/components/Footer.hbs
@@ -19,16 +19,16 @@
 
   <div class="Flexbox_Alle-Links">
     <div class="Flexbox_Links-Footer-One">
-      <a href="#" class="Link_Footer">Café</a>
-      <a href="#" class="Link_Footer">Shop</a>
-      <a href="#" class="Link_Footer">Herkunft</a>
+      <a href="../sub-page/DasCafe.html" class="Link_Footer">Café</a>
+      <a href="../sub-page/Shop.html" class="Link_Footer">Shop</a>
+      <a href="../sub-page/DieHerkunft.html" class="Link_Footer">Herkunft</a>
       <br />
       <br />
     </div>
 
     <div class="Flexbox_Links-Footer-Two">
-      <a href="#" class="Link_Footer">Impressum</a>
-      <a href="#" class="Link_Footer">Datenschutz</a>
+      <a href="../sub-page/Impressum.html" class="Link_Footer">Impressum</a>
+      <a href="../sub-page/Datenschutz.html" class="Link_Footer">Datenschutz</a>
     </div>
   </div>
 </footer>
