--- a/src/components/header-sub-page-DasCafé.hbs
+++ b/src/components/header-sub-page-DasCafé.hbs
@@ -2,27 +2,27 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" />
+        <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
-            <a href="#" class="Link_top-nav">
+            <a href="../sub-page/DasCafe.html" class="Link_top-nav">
               <span>das Café</span>
             </a>
           </li>
           <li class="Item_top-nav">
-            <a href="#" class="Link_top-nav">
+            <a href="../sub-page/DieHerkunft.html" class="Link_top-nav">
               <span>Herkunft</span>
             </a>
           </li>
           <li class="Item_top-nav">
-            <a href="#" class="Link_top-nav">
+            <a href="../sub-page/Shop.html" class="Link_top-nav">
               <span>Shop</span>
             </a>
             <li class="Item_top-nav">
-              <a href="#" class="Link_top-nav">
+              <a href="../sub-page/Cart.html" class="Link_top-nav">
                 <img
-                  src="images/Shop Icon White.svg"
+                  src="../images/Shop Icon White.svg"
                   alt="Cart"
                   class="top-nav__icon"
                 />
@@ -47,17 +47,17 @@
       <div class="Menupunkte_mobile">
         <ul class="List_top-nav-mobile">
           <li class="Item_top-nav-mobile">
-            <a href="#" class="Link_top-nav-mobile">
+            <a href="../sub-page/DasCafe.html" class="Link_top-nav-mobile">
               <span>das Café</span>
             </a>
           </li>
           <li class="Item_top-nav-mobile">
-            <a href="#" class="Link_top-nav-mobile">
+            <a href="../sub-page/DieHerkunft.html" class="Link_top-nav-mobile">
               <span>Herkunft</span>
             </a>
           </li>
           <li class="Item_top-nav-mobile">
-            <a href="#" class="Link_top-nav-mobile">
+            <a href="../sub-page/Shop.html" class="Link_top-nav-mobile">
               <span>Shop</span>
             </a>
           </li>
