--- a/src/components/header-sub-page-DieHerkunft.hbs
+++ b/src/components/header-sub-page-DieHerkunft.hbs
@@ -6,21 +6,21 @@
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
-            <a href="#" class="Link_top-nav">
+            <a href="../sub-page/DasCafe.html" class="Link_top-nav">
               <span>das Café</span>
             </a>
           </li>
           <li class="Item_top-nav">
-            <a href="#" class="Link_top-nav">
+            <a href="../sub-page/DieHerkunft.html" class="Link_top-nav">
               <span>Herkunft</span>
             </a>
           </li>
           <li class="Item_top-nav">
-            <a href="#" class="Link_top-nav">
+            <a href="../sub-page/Shop.html" class="Link_top-nav">
               <span>Shop</span>
             </a>
             <li class="Item_top-nav">
-              <a href="#" class="Link_top-nav">
+              <a href="../sub-page/Cart.html" class="Link_top-nav">
                 <img
                   src="images/Shop Icon White.svg"
                   alt="Cart"
@@ -47,17 +47,17 @@
       <div class="Menupunkte_mobile">
         <ul class="List_top-nav-mobile">
           <li class="Item_top-nav-mobile">
-            <a href="#" class="Link_top-nav-mobile">
+            <a href="../sub-page/DasCafe.html" class="Link_top-nav-mobile">
               <span>das Café</span>
             </a>
           </li>
           <li class="Item_top-nav-mobile">
-            <a href="#" class="Link_top-nav-mobile">
+            <a href="../sub-page/DieHerkunft.html" class="Link_top-nav-mobile">
               <span>Herkunft</span>
             </a>
           </li>
           <li class="Item_top-nav-mobile">
-            <a href="#" class="Link_top-nav-mobile">
+            <a href="../sub-page/Shop.html" class="Link_top-nav-mobile">
               <span>Shop</span>
             </a>
           </li>
