Links sind ready!

--- a/src/components/Footer-sub-page.hbs
+++ b/src/components/Footer-sub-page.hbs
@@ -28,7 +28,7 @@
 
     <div class="Flexbox_Links-Footer-Two">
       <a href="../sub-page/Impressum.html" class="Link_Footer">Impressum</a>
-      <a href="../sub-page/Datenschutz.html" class="Link_Footer">Datenschutz</a>
+      <a href="../sub-page/Impressum.html#Datenschutz" class="Link_Footer">Datenschutz</a>
     </div>
   </div>
 </footer>
