--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -2,7 +2,7 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" />
+        <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
@@ -37,11 +37,11 @@
     <nav class="Menu_mobile">
 
       <div class="Logo_top-nav_mobile">
-        <img src="images/Logo.svg" alt="Logo" id="logoImg"/>
+        <img src="../images/Logo.svg" alt="Logo" id="logoImg"/>
       </div>
 
       <div class="Menu_toggle" onclick="toggleMenu()">
-        <img src="images/Burger Menu.svg" alt="Menu" id="burgerImg"/>
+        <img src="../images/Burger Menu.svg" alt="Menu" id="burgerImg"/>
       </div>
 
       <div class="Menupunkte_mobile">
@@ -64,7 +64,7 @@
         </ul>
 
         <div class="Menu_close" onclick="toggleMenu()">
-          <img src="images/Burger Menu close.svg" alt="Close" />
+          <img src="../images/Burger Menu close.svg" alt="Close" />
 
         </div>
       </div>
