--- a/src/components/header-sub-page-DieHerkunft.hbs
+++ b/src/components/header-sub-page-DieHerkunft.hbs
@@ -2,7 +2,7 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="images/Logo.svg" alt="Logo" class="Logo_top-nav" />
+        <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
@@ -22,7 +22,7 @@
             <li class="Item_top-nav">
               <a href="../sub-page/Cart.html" class="Link_top-nav">
                 <img
-                  src="images/Shop Icon White.svg"
+                  src="../images/Shop Icon White.svg"
                   alt="Cart"
                   class="top-nav__icon"
                 />
