--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,4 @@
 @import "components/subpage-boxes_DasCafé.css";
 @import "components/subpage-boxes_DieHerkunft.css";
 @import "components/subpage-boxes_Impressum.css";
+@import "components/subpage-boxes_Kontakt.css";
