Shop html desktop&mobil ready

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,3 +13,4 @@
 @import "components/subpage-boxes_DieHerkunft.css";
 @import "components/subpage-boxes_Impressum.css";
 @import "components/subpage-boxes_Kontakt.css";
+@import "components/subpage-boxes_Shop.css";
