--- a/src/css/components/subpage-boxes_Kontakt.css
+++ b/src/css/components/subpage-boxes_Kontakt.css
@@ -1,19 +1,29 @@
 .Link_Black {
-    color:fff;
+  color: fff;
 }
 
 .Flexbox_Kontakt {
-display:flex;
-flex-direction: row;
-padding: 15%;
-
+  display: flex;
+  flex-direction: row;
+  padding: 15%;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    width: 100%;
+    padding: 5%;
+  }
 }
 
 .Content_Kontakt {
-padding: 20px;
-width:50%;
-float:right;
-display:flex;
+  padding: 20px;
+  width: 50%;
+  float: right;
+  display: flex;
+  @media (max-width: 768px) {
+    width: 100%;
+    padding: 5%;
+    margin: 0 auto;
+    display: block;
+  }
 }
 
 input[type="text"],
@@ -21,70 +31,73 @@ input[type="email"],
 input[type="tel"],
 select,
 textarea {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-bottom: 2px solid black;
-    margin-bottom: 20px;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-bottom: 2px solid black;
+  margin-bottom: 20px;
 }
 
 select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-image: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M7 10l5 5 5-5z" /></svg>'), linear-gradient(to right, black 95%, transparent 100%);
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: 20px auto;
-    padding-right: 30px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M7 10l5 5 5-5z" /></svg>'),
+    linear-gradient(to right, black 95%, transparent 100%);
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: 20px auto;
+  padding-right: 30px;
 }
 
 textarea {
-    width: 100%;
-    height: 150px;
+  width: 100%;
+  height: 150px;
+  @media (max-width: 768px) {
+    height: auto;
+  }
 }
 
 label {
-    padding-top: 20px;
-    display:block;
+  padding-top: 20px;
+  display: block;
 }
 
 .checkbox-label {
-    font-size: 0.6em;
-    padding:0;
-    margin-top:10px;
-    display:inline-block;
-    align-items:center;
+  font-size: 0.6em;
+  padding: 0;
+  margin-top: 10px;
+  display: inline-block;
+  align-items: center;
 }
 
 #privacy-policy-link {
-    text-decoration: none;
-    padding: 0;
-    margin-left: 5px;
+  text-decoration: none;
+  padding: 0;
+  margin-left: 5px;
 }
 
 #subject {
-    border: 1px solid black;
-    border-radius:3px;
-    margin: 10px 0 20px 0;
+  border: 1px solid black;
+  border-radius: 3px;
+  margin: 10px 0 20px 0;
 }
 
 #message {
-    padding: 30px 0 0 10px;
+  padding: 30px 0 0 10px;
 }
 
 #submit-button {
-    background-color: black;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-    Margin:30px auto 0;
-    display:block;
-    
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  margin: 30px auto 0;
+  display: block;
 }
 
 #submit-button:hover {
-    background-color: darkgray;
+  background-color: darkgray;
 }
