--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,3 +14,4 @@
 @import "components/subpage-boxes_Impressum.css";
 @import "components/subpage-boxes_Kontakt.css";
 @import "components/subpage-boxes_Shop.css";
+@import "components/subpage-boxes_Produkt.css";
