--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,3 +15,4 @@
 @import "components/subpage-boxes_Kontakt.css";
 @import "components/subpage-boxes_Shop.css";
 @import "components/subpage-boxes_Produkt.css";
+@import "components/subpage-boxes_Cart.css";
