--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -19,15 +19,15 @@
             <a href="../sub-page/Shop.html" class="Link_top-nav">
               <span>Shop</span>
             </a>
-            <li class="Item_top-nav">
-              <a href="../sub-page/Cart.html" class="Link_top-nav">
+            </li>
+            <li class="Item_top-nav" id="Cart">
+              <a href="#" class="Link_top-nav">
                 <img
                   src="images/Shop Icon White.svg"
                   alt="Cart"
                   class="top-nav__icon"
                 />
               </a>
-            </li>
           </li>
         </ul>
       </nav>
@@ -79,5 +79,30 @@
 
     <a href="../sub-page/Shop.html" class="btn btn-anthrazit btn-animated">zum Shop</a>
   </div>
+  
+  
 
+
+  <div id="overlay" class="overlay">
+    <div class="cart-content">
+      <h3 class="Titel_Warenkorb">Warenkorb</h3>
+      <div class="cart-summary">
+        <p><span id="total-items">0</span> Produkte</p>
+        <div class="success-box">Produkt(e) wurde(n) erfolgreich zum Warenkorb hinzugefügt.</div>
+      </div>
+      <div class="products-list">
+        <!-- Produkte werden hier eingefügt -->
+      </div>
+      <div class="totals">
+        <div>Zwischensumme: <span id="subtotal">0€</span></div>
+        <div>Versandkosten: 3,9€</div>
+        <hr class="divider">
+        <div>Gesamtbetrag: <span id="total">0€</span></div>
+      </div>
+      <div class="Box_Button">
+      <button class="checkout-button">Zur Kasse</button>
+      </div>
+    </div>
+  </div>
+<script src="../js/cart.js"></script>
 </header>
