Map adress ready

--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -2,8 +2,9 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
-
+        <a href="../index.html">
+          <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
+        </a>
         <ul class="List_top-nav">
           <li class="Item_top-nav">
             <a href="../sub-page/DasCafe.html" class="Link_top-nav">
@@ -83,7 +84,10 @@
 
   <div id="overlay" class="overlay">
     <div class="cart-content">
-       <span class="close-button"><img src="../images/Burger Menu close Black.svg" alt="Close"></span>
+      <span class="close-button"><img
+          src="../images/Burger Menu close Black.svg"
+          alt="Close"
+        /></span>
       <h3 class="Titel_Warenkorb">Warenkorb</h3>
       <div class="cart-summary">
         <p><span id="total-items">0</span> Produkte</p>
@@ -113,6 +117,6 @@
       </div>
     </div>
   </div>
-  
+
   <script src="../js/cart.js"></script>
 </header>
