--- a/src/components/header-sub-page-DasCafé.hbs
+++ b/src/components/header-sub-page-DasCafé.hbs
@@ -2,7 +2,9 @@
   <div class="Menu_Desktop">
     <div class="Box_top-nav">
       <nav class="Bar_top-nav">
-        <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
+        <a href="../index.html">
+          <img src="../images/Logo.svg" alt="Logo" class="Logo_top-nav" />
+        </a>
 
         <ul class="List_top-nav">
           <li class="Item_top-nav">
