--- a/src/components/header.hbs
+++ b/src/components/header.hbs
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="Box_Button">
-        <button class="checkout-button">Zur Kasse</button>
+        <button class="btn btn-animated checkout-button">Zur Kasse</button>
       </div>
     </div>
   </div>
