Fehlermeldungen für Pfade überarbeitet, Scripte und Video laufen korrekt

--- a/src/components/header-sub-page-DieHerkunft.hbs
+++ b/src/components/header-sub-page-DieHerkunft.hbs
@@ -24,7 +24,7 @@
            <li class="Item_top-nav" id="Cart">
             <a href="#" class="Link_top-nav">
               <img
-                src="images/Shop Icon White.svg"
+                src="../images/Shop Icon White.svg"
                 alt="Cart"
                 class="top-nav__icon"
               />
@@ -103,5 +103,5 @@
       </div>
     </div>
   </div>
-  <script src="../js/cart.js"></script>
+  
 </header>
